
    o	read.table() now allows embedded newlines in quoted fields. (PR#4555)

    o	New command-line argument --max-ppsize allows the size of the
	pointer protection stack to be set higher than the previous
	limit of 10000.

    o	The fonts on an X11() device (also jpeg() and png() on Unix)
	can be specified by a new argument `fonts' defaulting to the
	value of a new option "X11fonts".

    o	strsplit() now has a `fixed' argument and split="" is optimized.

    o	findInterval(x, v) now allows +/-Inf values, and NAs in x.

    o   subset() now allows a `drop' argument to remove unused factor
        levels.  The default is still to keep them.

    o	model.frame() methods, for example those for "lm" and "glm",
	pass relevant parts of ... onto the default method.  (This has
	long been documented but not done.)  The default method is now
	able to cope with model classes such as "lqs" and "ppr".

    o	nls() and ppr() have a `model' argument to allow the model frame
	to be returned as part of the fitted object.

    o	glm() arguments `etastart' and `mustart' are now evaluated via
	the model frame in the same way as `subset' and `weights'.

    o	factanal(), loess() and princomp() now explicitly check for
	numerical inputs; they might have silently coded factor
	variables in formulae.

    o	ppr() now fully supports categorical explanatory variables,

    o   On some OSes (including Windows and those using glibc)
	strptime() does not validate dates correctly, so we have added
	extra code to do so.  However, this cannot correct scanning
	errors in the OS's strptime (although we have been able to
	work around these on Windows).  Some examples are now tested for
	during configuration.

    o   There is a new function contourLines() to produce contour
	lines (but not draw anything).  This makes the CRAN package
	clines (with its clines() function) redundant.

    o   postscript() device output has been modified to work around